<resources>

    <string name="app_name">SkillBloom</string>
    <string name="welcome">Welcome,</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Leanback MainActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="no_result">No results found</string>
    <string name="no_result_des">The search could not be found, please check</string>
    <string name="no_result_des2">spelling or write another word.</string>

    <!-- Splash txt -->
    <string name="splash_motto">Unlock Your</string>
    <string name="potential">Skill Potential</string>
    <string name="here">Here!</string>
    <string name="quote">Explore all the most exciting job roles based on your interest and study major.</string>

    <!-- Bottom Bar txt -->
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="Post">Post</string>
    <string name="Save">Save</string>

    <!-- Roles Demo -->
    <string name="role">Software Engineer</string>
    <string name="role1">UI/UX Designer</string>
    <string name="role2">Product Manager</string>
    <string name="role3">DevOps Engineer</string>
    <!-- Names Demo -->
    <string name="username">Wan Dara</string>
    <string name="location">Phnom Penh, Cambodia</string>
    <string name="imgicon">Image or Icon</string>
    <string name="welcome_message">Join thousands of freelancers and find your perfect match.</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="welcome_login">Welcome Back</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="switch_to_signup">Don’t have an account?</string>
    <string name="switch_to_login">Already have an account?</string>
    <string name="remember">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="fill_later">Fill up later</string>
    <string name="discover">Discover</string>
    <string name="post">Post</string>
    <string name="bookmark">BookMark</string>
    <string name="profile">Profile</string>
    <string name="Profile">Profile</string>
    <string name="motto1">Find your perfect</string>
    <string name="motto2">Match Project with</string>
    <string name="description">Apple inc . California, USA</string>
    <string name="question">What are the characteristics of a fake job call form?</string>
    <string name="answer">Because I always find fake job calls so I’m confused which job to take. Can you share your knowledge here? Thank you.</string>

    <string name="number_follower">120k</string>
    <string name="follower">Follower</string>
    <string name="number_following">23k</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit profile</string>
    <string name="about_me">About me</string>
    <string name="experience">Work experience</string>
    <string name="skill">Skill</string>
    <string name="language">Language</string>
    <string name="aboutMe">"As a Software Engineer, I design, develop, and maintain software systems that solve real-world problems and enhance user experiences. My role involves analyzing requirements, crafting efficient and scalable solutions, and writing clean, maintainable code. With a strong foundation in programming, I leverage modern tools and frameworks to build applications across various domains, ensuring they are reliable, secure, and user-friendly. Collaboration with cross-functional teams, debugging complex issues, and staying updated with the latest technological advancements are integral to my work. I take pride in transforming ideas into functional, high-quality software that meets the needs of users and businesses alike."</string>
    <string name="manager">Manager</string>
    <string name="amazon">Amazon Inc</string>
    <string name="leadership">Leadership</string>
    <string name="teamwork">Teamwork</string>
    <string name="visioner">Visioner</string>
    <string name="target_oriented">Target oriented</string>
    <string name="consistent">Consistent</string>
    <string name="five_more">+5 more</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="mandarin">Mandarin</string>
    <string name="italy">Italy</string>

    <string-array name="filter_options">
        <item>All</item>
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
    </string-array>

    <string name="moneyPerHour">$35/hr</string>
</resources>
