<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/app_name"
        android:layout_gravity="top|end"
        android:padding="16dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/splash_img"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:text="@string/splash_motto"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/potential"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/here"/>
        <TextView
            android:paddingTop="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quote"/>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="20sp"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/onToNext"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:background="@drawable/circle_shape"
                android:src="@drawable/baseline_arrow_forward_24"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>
