<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="208dp"
            app:cardElevation="0dp">

        <ImageView
            android:id="@+id/profileBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/cover_background"
            android:background="@drawable/rounded_bottom" />
    </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40sp"
            android:paddingTop="70sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="Hello"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/username"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/profileAvatarContainer"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@drawable/rounded_background"
            android:textAlignment="textStart"
            android:layout_marginLeft="-30sp"
            android:paddingVertical="30sp"
            android:paddingLeft="70sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/light_blue"
                android:text="@string/welcome" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/light_blue"
                android:text="@string/motto1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/light_blue"
                android:text="@string/motto2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/app_name" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:background="@drawable/searchview_background" />

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="14dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:background="@color/main_background"
                    android:src="@drawable/icon_filter" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:orientation="horizontal">

            <!-- First TextView: Left-Aligned -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="Explore Categories" />

            <!-- Spacer to Push "View All" to the End -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <!-- Second TextView: Right-Aligned -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="view all" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
